fix: switch to burgundy, teal was too close to other colours

--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ body {
   color: #fff !important;
 }
 
-.text-bg-teal {
-  background-color: #20c997 !important;
+.text-bg-burgundy {
+  background-color: #7c0d0d !important;
   color: #fff !important;
 }
